parkrun-stats - Remove NZ WeekendResults and BackfillResults